Bug 440231 - After Blue Ocean changes, Dockable Panel / MDI buttons no longer have a hover highlight
Summary: After Blue Ocean changes, Dockable Panel / MDI buttons no longer have a hover...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-07-24 18:30 UTC by Paul McAuley
Modified: 2022-03-06 17:41 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.3
Sentry Crash Report:


Attachments
For example, the restore/undock button here in KDevelop used to show a highlighted background when moused over: (370.82 KB, image/png)
2021-07-24 18:30 UTC, Paul McAuley
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul McAuley 2021-07-24 18:30:45 UTC
Created attachment 140303 [details]
For example, the restore/undock button here in KDevelop used to show a highlighted background when moused over:

KDE Neon Unstable 5.22.80.

After Blue Ocean changes, a regression has been introduced whereby Dockable Panel / MDI buttons no longer have a hover highlight on mouse-over.
Comment 1 Nate Graham 2021-07-28 20:38:21 UTC
*** Bug 438964 has been marked as a duplicate of this bug. ***
Comment 2 Paul McAuley 2021-11-28 19:14:29 UTC
I have isolated this regression to commit:

8de82c4d508510a9f6a633d820fba1303c5d129a Make buttons styled like Blue Ocean mockups
Comment 3 Paul McAuley 2021-11-28 19:17:16 UTC
(In reply to Paul McAuley from comment #2)
> I have isolated this regression to commit:
> 
> 8de82c4d508510a9f6a633d820fba1303c5d129a Make buttons styled like Blue Ocean
> mockups

https://invent.kde.org/plasma/breeze/-/commit/8de82c4d508510a9f6a633d820fba1303c5d129a
Comment 4 Paul McAuley 2021-11-28 22:24:21 UTC
(In reply to Paul McAuley from comment #3)

> https://invent.kde.org/plasma/breeze/-/commit/
> 8de82c4d508510a9f6a633d820fba1303c5d129a
I left a comment at the link above.

I have pinpointed this further to the function:
bool Style::drawToolButtonLabelControl( const QStyleOption* option, QPainter* painter, const QWidget* widget ) const

Restoring the following lines restores the previous hover behaviour in docks:
else if( (!flat && hasFocus) || (flat && (state & State_Sunken) && !mouseOver) ) iconMode = QIcon::Selected;
            else if( mouseOver && flat ) iconMode = QIcon::Active;


Deleting similar hover logic is done in 3 other places in this commit, so I'm not sure if there are any other side-effects caused by that commit. I would need to know what cblack's thinking was in deleting the hover logic. I see that animation logic has also been deleted.
Comment 5 Nate Graham 2021-11-29 17:40:12 UTC
Jan, can you please investigate? Thanks.
Comment 6 Bug Janitor Service 2022-03-04 16:00:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/192
Comment 7 Nate Graham 2022-03-06 17:41:10 UTC
Git commit 386b12d3bfaef878dd95ac5dd7d13a0560fb3d73 by Nate Graham, on behalf of Jan Blackquill.
Committed on 06/03/2022 at 17:41.
Pushed by ngraham into branch 'master'.

kstyle: fix dock title toolbar buttons not indicating selected/active state
FIXED-IN: 5.24.3

M  +2    -0    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/386b12d3bfaef878dd95ac5dd7d13a0560fb3d73