kstyle: fix dock title toolbar buttons not indicating selected/active state

BUG: 440231
FIXED-IN: 5.24.3